kubernetes/apps/base/auth/authelia/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${domain}.${tld}`)
      kind: Rule
      services:
        - kind: Service
          name: authelia
          port: 80
          sticky:
            cookie:
              httpOnly: true
              secure: true
              name: TraefikAutheliaSticky
